RESOLVED FIXED315251
Fix ContainerNode::replaceAll not removing existing children when inserting an Element
https://bugs.webkit.org/show_bug.cgi?id=315251
Summary Fix ContainerNode::replaceAll not removing existing children when inserting a...
Nathan Solomon
Reported 2026-05-20 18:02:48 PDT
Attachments
Nathan Solomon
Comment 1 2026-05-20 18:13:31 PDT
EWS
Comment 2 2026-05-26 14:09:32 PDT
Committed 313912@main (4c43686c301a): <https://commits.webkit.org/313912@main> Reviewed commits have been landed. Closing PR #65353 and removing active labels.
EWS
Comment 3 2026-05-29 15:41:55 PDT
Committed 305877.692@webkitglib/2.52 (02b302f0d254): <https://commits.webkit.org/305877.692@webkitglib/2.52> Reviewed commits have been landed. Closing PR #66048 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.